--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -34,6 +34,8 @@ requirements:
     - pycosat >=0.6.1
     - requests >=2.5.3
     - ruamel_yaml >=0.11.14
+    - tuf
+    - cryptography
 
 test:
   imports:
